--- a/HTML/victor hugo/victor.css
+++ b/HTML/victor hugo/victor.css
@@ -15,6 +15,6 @@ img{display: flex;
     align-items: center;
     justify-content: center;
     float: left;
-    position: relative;
-    left: 100;
+ position: ;
+
 }
